@@ -1,0 +1,28 @@
+#' @export
+makeRLearner.cluster.Cobweb = function() {
+  makeRLearnerCluster(
+    cl = "cluster.Cobweb",
+    package = "RWeka",
+    par.set = makeParamSet(
+      makeNumericLearnerParam(id = "A", default = 1, lower = 0),
+      makeNumericLearnerParam(id = "C", default = 0.002, lower = 0),
+      makeIntegerLearnerParam(id = "S", default = 42L, lower = 1L)
+    ),
+    properties = c("numerics"),
+    name = "Cobweb clustering algorithm",
+    short.name = "Cobweb"
+  )
+}
+
+#' @export
+trainLearner.cluster.Cobweb = function(.learner, .task, .subset, .weights = NULL,  ...) {
+  ctrl = Weka_control(...)
+  Cobweb(getTaskData(.task, .subset), control = ctrl)
+}
+
+#' @export
+predictLearner.cluster.Cobweb = function(.learner, .model, .newdata, ...) {
+  # RWeka returns cluster indices (i.e. starting from 0, which some tools don't like
+  predict(.model$learner.model, .newdata, ...) + 1
+}
+
